[package]
name = "linkpress-rs"
version = "0.1.0"
authors = ["AbrahumLink <307887491@qq.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
rocket = "0.5.0-dev"
toml = "0.5.8"
serde = "1.0.127"
chrono = "0.4.19"
figment = "0.10.6"
clap = "2.33.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.handlebars]
version = "3.5.5"
features = ["dir_source"]
