[package]
name = "linkpress-rs"
version = "0.1.0"
authors = ["AbrahumLink <307887491@qq.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "linkpress"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.8.0"
rocket = "0.5.0-dev"
toml = "0.5.8"
serde = "1.0.127"
chrono = "0.4.19"
clap = "2.33.3"
regex = "1.5.4"
serde_yaml = "0.8.17"
tera = "1.12.1"
log = "0.4.0"
simple_logger = "1.13.0"
colored = "1.9.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]
