[package]
name = "linkpress-rs"
version = "0.1.0"
authors = ["AbrahumLink <307887491@qq.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "linkpress"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.8.0"
toml = "0.5.8"
serde = { version = "1.0.127", features = ["derive"] }
chrono = "0.4.19"
clap = "2.33.3"
regex = "1.5.4"
serde_yaml = "0.8.17"
tera = "1.12.1"
log = "0.4.0"
simple_logger = "1.13.0"
colored = "1.9.3"
axum = "0.1.3"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.1.1", features = ["fs"] }
http = "0.2.4"
urlencoding = "2.1.0"

[profile.release]
lto = true
